// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getJoiRequestValidatorPlugin joiResponseValidatorPlugin segment validation validates body 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"pong\\" must be a number",
        "path": Array [
          "pong",
        ],
        "type": "number.base",
      },
    ],
    "message": "\\"pong\\" must be a number",
    "segment": "body",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiResponseValidatorPlugin segment validation validates headers 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"x-count\\" is required",
        "path": Array [
          "x-count",
        ],
        "type": "any.required",
      },
    ],
    "message": "\\"x-count\\" is required",
    "segment": "headers",
  },
}
`;
